Revision history for {{$dist->name}}

{{$NEXT}}

0.004     2014-05-19 05:15:36Z
          - fix tests that fail with older ExtUtils::MakeMaker due two stupid
            typos that conspired together in a web of evil

0.003     2014-05-17 17:11:46Z
          - really fix tests this time...
          - new runtime check for versions of [MakeMaker::Awesome] that are
            too old to be compatible with the munging done in this plugin

0.002     2014-05-13 05:03:02Z
          - fix tests that fail when ExtUtils::MakeMaker is at version 6.63_02
            or older

0.001     2014-05-10 23:04:10Z
          - Initial release.